# git-workflow-helper

./: README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml  bump-version.yml
docs/: usage.md
scripts/: generate_icons.py
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: BranchCreator.vue  BranchList.vue  ProjectManager.vue  QuickActions.vue
src/stores/: git.ts
src/types/: index.ts
